# tictactoe_tay_gideon

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_gt2528/: __init__.py  tictactoe_gt2528.py
tests/: test_tictactoe_gt2528.py
