[tool.poetry]
name = "tictactoe_gt2528"
version = "0.1.1"
description = "a test tictactoe game package for QMSS homework"
authors = ["Gideon Tay"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
